# flask-shell-turbo

./: README.md  pyproject.toml  setup.cfg
flask_shell_plus/: __init__.py  shell.py
flask_shell_turbo/: __init__.py
src/flask_shell_turbo/: shell.py
