[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-shell-plus"
version = "0.0.1"
description = "Flask shell with steroids"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Alejandro Betancourt", email = "fierroformo@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
dependencies = [
    "ipython",
]

[project.urls]
"Homepage" = "https://github.com/fierroformo/flask-shell-plus"
"Bug Tracker" = "https://github.com/fierroformo/flask-shell-plus/issues"
