[metadata]

name = flask-shell-plus
version = 0.0.1
author = Alejandro Betancourt
author_email = fierroformo@gmail.com
description = Flask shell with steroids
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fierroformo/flask-shell-plus
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = flask_shell_plus
packages = find:
python_requires = >=3.8
install_requires =
    ipython

[options.packages.find]
where = flask_shell_plus