[metadata]

name = flask-shell-turbo
version = 1.0.0
author = Alejandro Betancourt
author_email = fierroformo@gmail.com
description = Flask shell with steroids
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fierroformo/flask-shell-turbo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = flask_shell_turbo
packages = find:
python_requires = >=3.8
install_requires =
    ipython

[options.packages.find]
where = flask_shell_turbo
